--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,16 +16,17 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TableRow
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <EditText
-                android:id="@+id/editTextTextPersonName"
+                android:id="@+id/ditTextTextPersonName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName2"
@@ -33,7 +34,7 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName3"
@@ -41,7 +42,7 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName4"
@@ -49,7 +50,7 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName5"
@@ -57,10 +58,11 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
         </TableRow>
 
         <TableRow
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -70,7 +72,7 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName7"
@@ -78,7 +80,7 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName8"
@@ -86,7 +88,7 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName9"
@@ -94,7 +96,7 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName10"
@@ -102,10 +104,11 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
         </TableRow>
 
         <TableRow
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -115,7 +118,7 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName12"
@@ -123,7 +126,7 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName13"
@@ -131,7 +134,7 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName14"
@@ -139,7 +142,7 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName15"
@@ -147,10 +150,11 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
         </TableRow>
 
         <TableRow
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -160,7 +164,7 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName17"
@@ -168,7 +172,7 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName18"
@@ -176,7 +180,7 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName19"
@@ -184,7 +188,7 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName20"
@@ -192,10 +196,11 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
         </TableRow>
 
         <TableRow
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -205,7 +210,7 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName22"
@@ -213,7 +218,7 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName23"
@@ -221,7 +226,7 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName24"
@@ -229,7 +234,7 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
 
             <EditText
                 android:id="@+id/editTextTextPersonName26"
@@ -237,7 +242,7 @@
                 android:layout_height="wrap_content"
 
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="0" />
 
         </TableRow>
     </TableLayout>
@@ -246,7 +251,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="calculate"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -254,9 +259,11 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="245dp"
-        android:layout_height="13dp"
-        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="RESULT"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/tableLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
